<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.mindtree.orchardadmin.About">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/usage"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#134e7a" />

        <WebView
            android:id="@+id/aboutView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/aboutView"
            android:layout_marginTop="30dp"
            android:text="@string/leads"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#134e7a" />

        <TextView
            android:id="@+id/leadView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#286b9c" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/leadView"
            android:layout_marginTop="30dp"
            android:text="@string/development_team"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#134e7a" />

        <TextView
            android:id="@+id/teamView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#286b9c" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teamView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/mindtree"
            android:contentDescription="@string/mindtree_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="20dp"
            android:text="@string/u00a9_mindtree_ltd_nall_rights_reserved"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#134e7a" />
    </RelativeLayout>
</ScrollView>