<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/mindtreeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="Orchard Management"
        android:textColor="#134e7a"
        android:textSize="26sp" />

    <ImageView
        android:id="@+id/mindtreeLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mindtreeHeader"
        android:layout_centerHorizontal="true"
        android:src="@drawable/mindtree"
        tools:ignore="ContentDescription"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mindtreeLogo"
        android:layout_marginTop="46dp"
        android:hint="@string/enter_mid_e_g_m1234567"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textColorHint="#2495ea"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter password:"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        android:textColorHint="#2495ea"
        android:textSize="20sp"
        android:layout_below="@+id/mid"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="visible" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:text="@string/start"
        android:visibility="visible" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/mid"
        android:layout_alignRight="@+id/mid"
        android:layout_below="@+id/password"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginTop="70dp"
        android:text="@string/exit"
        android:visibility="visible" />

</RelativeLayout>